--- a/references.html
+++ b/references.html
@@ -31,46 +31,46 @@
 <body>
 
     <!-- =========== Header Side =========== -->
-  <header id="header">
-  <div
-    class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
-    <div class="logo order-0 ">
-     <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
-    </div>
-    <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
-      <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
-        <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-          <li><a class="active" href="index.html">anasayfa</a></li>
-          <li><a href="about-us.html">hakkımızda</a></li>
-          <li class="dropdown">
-            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
-            <ul class="dropdown-content">
-              <li><a href="services.html">Hizmetler</a></li>
-              <li><a href="services-detail.html">Hizmet Detay</a></li>
-              <li><a href="references.html">Referanslar</a></li>
-              <li><a href="references-detail.html">Referenslar Detay</a></li>
-              <li><a href="index.html">Anasayfa</a></li>
-              <li><a href="contact.html">İletişim</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="blog-detail.html">Blog Detay</a></li>
+    <header id="header">
+        <div
+            class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+            <div class="logo order-0 ">
+                <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
+            </div>
+            <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
+                <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
+                    <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
+                        <li><a class="active" href="index.html">anasayfa</a></li>
+                        <li><a href="about-us.html">hakkımızda</a></li>
+                        <li class="dropdown">
+                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                            <ul class="dropdown-content">
+                                <li><a href="services.html">Hizmetler</a></li>
+                                <li><a href="services-detail.html">Hizmet Detay</a></li>
+                                <li><a href="references.html">Referanslar</a></li>
+                                <li><a href="references-detail.html">Referenslar Detay</a></li>
+                                <li><a href="index.html">Anasayfa</a></li>
+                                <li><a href="contact.html">İletişim</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="blog-detail.html">Blog Detay</a></li>
 
-            </ul>
-          </li>
-          <li><a href="references.html">Referanslar</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">İletişim</a></li>
-        </ol>
-      </nav>
+                            </ul>
+                        </li>
+                        <li><a href="references.html">Referanslar</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contact.html">İletişim</a></li>
+                    </ol>
+                </nav>
 
-      <div class="d-none d-lg-flex ms-auto align-items-center search">
-        <i class='bx bx-search'></i>
-        <input type="text" placeholder="ARA">
-      </div>
-    </div>
-    <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-    <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
+                <div class="d-none d-lg-flex ms-auto align-items-center search">
+                    <i class='bx bx-search'></i>
+                    <input type="text" placeholder="ARA">
+                </div>
+            </div>
+            <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
+            <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
 
-</header>
+    </header>
     <!-- Header Side END -->
     <section id="references">
         <div class="container">
@@ -88,69 +88,93 @@
             <div class="row g-4 justify-content-lg-start justify-content-center referencesIsotope">
 
                 <!-- 1. ikili -->
-                <div class="col-lg-6 col-12 img-body website ilksira">
-                  <a href="references-detail.html">  <img src="assets/img/references/references-1.png" class="img-fluid"></a>
-                    <div class="img-content">
-                        <h4>Koç Holding</h4>
-                        <h5>Makine yönetimi Sitesi</h5>
+                <div class="col-lg-6 col-12  website ilksira">
+                    <div class="img-body">
+                        <a href="references-detail.html"> <img src="assets/img/references/references-1.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 img-body logo ilksira">
-                    <img src="assets/img/references/references-2.png" class="img-fluid">
-                    <div class="img-content">
-                        <h4>Koç Holding</h4>
-                        <h5>Makine yönetimi Sitesi</h5>
+                <div class="col-lg-6 col-12 logo ilksira">
+                    <div class="img-body">
+                        <a href="references-detail.html"> <img src="assets/img/references/references-2.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
                     </div>
                 </div>
                 <!-- 1. ikili -->
 
                 <!-- 2. ikili -->
-                <div class="col-lg-6 col-12 img-body kurumsal ilksira">
-                    <img src="assets/img/references/references-1.png" class="img-fluid">
-                    <div class="img-content">
-                        <h4>Koç Holding</h4>
-                        <h5>Makine yönetimi Sitesi</h5>
+                <div class="col-lg-6 col-12  kurumsal ilksira">
+                    <div class="img-body">
+                        <a href="references-detail.html"> <img src="assets/img/references/references-1.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 img-body sosyal ilksira">
-                    <img src="assets/img/references/references-2.png" class="img-fluid">
-                    <div class="img-content">
-                        <h4>Koç Holding</h4>
-                        <h5>Makine yönetimi Sitesi</h5>
+                <div class="col-lg-6 col-12 sosyal ilksira">
+                    <div class="img-body">
+                        <a href="references-detail.html"> <img src="assets/img/references/references-2.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
                     </div>
                 </div>
                 <!-- 2. ikili -->
 
                 <!-- 3. ikili -->
-                <div class="col-lg-6 col-12 img-body rek ilksira">
-                    <img src="assets/img/references/references-1.png" class="img-fluid">
-                    <div class="img-content">
-                        <h4>Koç Holding</h4>
-                        <h5>Makine yönetimi Sitesi</h5>
+                <div class="col-lg-6 col-12  rek ilksira">
+                    <div class="img-body">
+                        <a href="references-detail.html"> <img src="assets/img/references/references-1.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 img-body website ilksira">
-                    <img src="assets/img/references/references-2.png" class="img-fluid">
-                    <div class="img-content">
-                        <h4>Koç Holding</h4>
-                        <h5>Makine yönetimi Sitesi</h5>
+                <div class="col-lg-6 col-12 website ilksira">
+                    <div class="img-body">
+                        <a href="references-detail.html"> <img src="assets/img/references/references-2.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
                     </div>
                 </div>
                 <!-- 3. ikili -->
 
-                 <!-- 4. ikili -->
-                 <div class="col-lg-6 col-12 img-body rek ikincisira">
-                    <img src="assets/img/references/references-1.png" class="img-fluid">
-                    <div class="img-content">
-                        <h4>Koç Holdings</h4>
-                        <h5>Makine yönetimi Sitesi</h5>
+                <!-- 4. ikili -->
+                <div class="col-lg-6 col-12  website ilksira">
+                    <div class="img-body">
+                        <a href="references-detail.html"> <img src="assets/img/references/references-1.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 img-body website ikincisira">
-                    <img src="assets/img/references/references-2.png" class="img-fluid">
-                    <div class="img-content">
-                        <h4>Koç Holding</h4>
-                        <h5>Makine yönetimi Sitesi</h5>
+                <div class="col-lg-6 col-12 logo ilksira">
+                    <div class="img-body">
+                        <a href="references-detail.html"> <img src="assets/img/references/references-2.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
                     </div>
                 </div>
                 <!-- 4. ikili -->
