--- a/raf.html
+++ b/raf.html
@@ -63,6 +63,7 @@
               <li><a href="index.html">Anasayfa</a></li>
               <li><a href="contact.html">İletişim</a></li>
               <li><a href="blog.html">Blog</a></li>
+              <li><a href="about-us.html">Hakkımızda</a></li>
               <li><a href="blog-detail.html">Blog Detay</a></li>
 
             </ul>
