--- a/services-detail.html
+++ b/services-detail.html
@@ -77,7 +77,7 @@
     <section id="services-detail">
         <div class="container">
             <h3>HİZMETLERİMİZ</h3>
-            <div class="row g-0 g-lg-5">
+            <div class="row gy-5 g-lg-5">
                 <div class="col-xl-6 text-center text-md-start">
                     <div class="content">
                         <div class="services-container">
