--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
         <div class="container">
             <h3>İLETİŞİM</h3>
 
-            <div class="row gx-5 gy-5 gy-lg-0">
+            <div class="row gy-5 gy-lg-0">
                 <div class="col-lg-6 order-1 order-lg-0">
                     <h2>Bize Yazın</h2>
                     <form>
