--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <li><a href="contact.html">İletişim</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li><a href="about-us.html">Hakkımızda</a></li>
-              <li><a href="blog-detail.html">Blog Detay</a></li>
+              <li><a href="blog-detay.html">Blog Detay</a></li>
 
             </ul>
           </li>
@@ -149,14 +149,14 @@
                         <div class="swiper-slide atest all">
                             <div class="row gy-5 gy-lg-0">
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1.png" class="img-fluid">
+                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
                                     </div>
                                 </div>
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1-2.png" class="img-fluid">
+                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1-2.png" class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
@@ -168,14 +168,14 @@
                         <div class="swiper-slide atest all">
                             <div class="row">
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1.png" class="img-fluid">
+                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
                                     </div>
                                 </div>
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1-2.png" class="img-fluid">
+                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1-2.png" class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
@@ -209,7 +209,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide ">
                             <div class="what-card">
-                                <img src="assets/img/whatElseWeDoSlides/img-1.png" class="img-fluid">
+                                <img src="assets/img/baska-neler-yapıyoruz-slides/img-1.png" class="img-fluid">
                                 <h4>
                                     web <br class="d-none d-sm-block"> yazılım
                                 </h4>
@@ -217,7 +217,7 @@
                         </div>
                         <div class="swiper-slide ">
                             <div class="what-card">
-                                <img src="assets/img/whatElseWeDoSlides/img-2.png" class="img-fluid">
+                                <img src="assets/img/baska-neler-yapıyoruz-slides/img-2.png" class="img-fluid">
                                 <h4>
                                     Kurulsal <br class="d-none d-sm-block"> Seo
                                 </h4>
@@ -225,7 +225,7 @@
                         </div>
                         <div class="swiper-slide ">
                             <div class="what-card">
-                                <img src="assets/img/whatElseWeDoSlides/img-3.png" class="img-fluid">
+                                <img src="assets/img/baska-neler-yapıyoruz-slides/img-3.png" class="img-fluid">
                                 <h4>
                                     E-Ticaret
                                 </h4>
@@ -233,7 +233,7 @@
                         </div>
                         <div class="swiper-slide ">
                             <div class="what-card">
-                                <img src="assets/img/whatElseWeDoSlides/img-4.png" class="img-fluid">
+                                <img src="assets/img/baska-neler-yapıyoruz-slides/img-4.png" class="img-fluid">
                                 <h4>
                                     Google Adwords
                                 </h4>
@@ -241,7 +241,7 @@
                         </div>
                         <div class="swiper-slide ">
                             <div class="what-card">
-                                <img src="assets/img/whatElseWeDoSlides/img-5.png" class="img-fluid">
+                                <img src="assets/img/baska-neler-yapıyoruz-slides/img-5.png" class="img-fluid">
                                 <h4>
                                     Sosyal Medya Danışmanlığı
                                 </h4>
@@ -249,7 +249,7 @@
                         </div>
                         <div class="swiper-slide ">
                             <div class="what-card">
-                                <img src="assets/img/whatElseWeDoSlides/img-2.png" class="img-fluid">
+                                <img src="assets/img/baska-neler-yapıyoruz-slides/img-2.png" class="img-fluid">
                                 <h4>
                                     Google Adwords
                                 </h4>
@@ -257,7 +257,7 @@
                         </div>
                         <div class="swiper-slide ">
                             <div class="what-card">
-                                <img src="assets/img/whatElseWeDoSlides/img-3.png" class="img-fluid">
+                                <img src="assets/img/baska-neler-yapıyoruz-slides/img-3.png" class="img-fluid">
                                 <h4>
                                     Sosyal Medya Danışmanlığı
                                 </h4>
@@ -371,7 +371,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 order-0 order-lg-1">
-                                    <img src="assets/img/blog-detail-img-1.png" class="img-fluid">
+                                    <img src="assets/img/blog-detay-img-1.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -390,7 +390,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 order-0 order-lg-1">
-                                    <img src="assets/img/blog-detail-img-1.png" class="img-fluid">
+                                    <img src="assets/img/blog-detay-img-1.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -401,8 +401,8 @@
                     <div class="swiper-pagination d-flex justify-content-lg-start justify-content-center"></div>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <div class="blog-Detail-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
-                    <div class="blog-Detail-btn-next"><i class="fa-solid fa-angle-right"></i></div>
+                    <div class="blog-detay-btn-prev"><i class="fa-solid fa-angle-left"></i></div>
+                    <div class="blog-detay-btn-next"><i class="fa-solid fa-angle-right"></i></div>
                 </div>
             </div>
 
