--- a/iletisim.html
+++ b/iletisim.html
@@ -40,26 +40,26 @@
     <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
       <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
         <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-          <li><a href="index.html">anasayfa</a></li>
-          <li><a class="active"  href="about-us.html">hakkımızda</a></li>
+          <li><a class="active" href="index.html">anasayfa</a></li>
+          <li><a href="hakkimizda.html">hakkımızda</a></li>
           <li class="dropdown">
             <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
             <ul class="dropdown-content">
-              <li><a href="services.html">Hizmetler</a></li>
-              <li><a href="services-detail.html">Hizmet Detay</a></li>
-              <li><a href="references.html">Referanslar</a></li>
-              <li><a href="references-detail.html">Referenslar Detay</a></li>
+              <li><a href="hizmetler.html">Hizmetler</a></li>
+              <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
+              <li><a href="referanslar.html">Referanslar</a></li>
+              <li><a href="referans-detay.html">Referenslar Detay</a></li>
               <li><a href="index.html">Anasayfa</a></li>
-              <li><a href="contact.html">İletişim</a></li>
+              <li><a href="iletisim.html">İletişim</a></li>
               <li><a href="blog.html">Blog</a></li>
-              <li><a href="about-us.html">Hakkımızda</a></li>
-              <li><a href="blog-detail.html">Blog Detay</a></li>
+              <li><a href="hakkimizda.html">Hakkımızda</a></li>
+              <li><a href="blog-detay.html">Blog Detay</a></li>
 
             </ul>
           </li>
-          <li><a href="references.html">Referanslar</a></li>
+          <li><a href="referanslar.html">Referanslar</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">İletişim</a></li>
+          <li><a href="iletisim.html">İletişim</a></li>
         </ol>
       </nav>
 
@@ -75,56 +75,90 @@
     <!-- Header Side END -->
 
     <!-- Contact Side START -->
-    <section id="aboutUs">
+    <section id="contact">
         <div class="container">
-            <h3>Hakkımızda</h3>
+            <h3>İLETİŞİM</h3>
 
-            <div class="row g-0 g-lg-5">
-                <div class="col-xl-6 text-center text-md-start">
-                    <div class="content">
-
-                        <h2>Biz Kimiz?</h2>
-                        <p>
-                            Real Web Tasarım, Büşra Çetinarslan (Yaratıcı Yönetmen & Kurucu Ortak) ve Melih Dinçer‘in
-                            (Projeler Yöneticisi, Kurucu Ortak) olarak yönettikleri dijital iletişim odaklı yaratıcı,
-                            entegre bir yeni nesil reklam ajansıdır.</p>
-                        <p>
-                            Fikirleri tüm platformlarda köpürtür, kabartır, kalıbından taşar, strateji yaratır; dijital,
-                            çizgi üstü ve çizgi altı tüm mecralara destek ve yön verir.
-                        </p>
-                        <p>
-                            RealWebTasarım, kampanya, online & offline iletişim ve sosyal medya iletişimi dendiğinde
-                            kulak
-                            kabartır.
-                        </p>
-                        <p>
-                            Yalnızca kendine söyleneni yapan değil, büyük resmi düşünen, iletişim entegrasyonuna inanan,
-                            para kazanırken hizmet verdiği markanın imaj ve satış anlamında artışlar yaşadığı verimli
-                            projeler peşinde koşan bir ajanstır. Gün geçtikçe daha komplike hale gelen pazarlama
-                            mecraları
-                            ve araçlarının tümünde deneyim sahibi olduğu için marka adına “Bütünleşik Pazarlama
-                            İletişimi”
-                            yöntemlerini sahiplenir ve bunu marka ile birlikte yönetmek için çabalar.
-                        </p>
-                    </div>
+            <div class="row gy-5 gy-lg-0">
+                <div class="col-lg-6 order-1 order-lg-0">
+                    <h2>Bize Yazın</h2>
+                    <form>
+                        <input type="text" placeholder="İsim ve Soyisminiz">
+                        <input type="text" placeholder="Telefonunuz">
+                        <input type="text" placeholder="Eposta Adresiniz">
+                        <textarea rows="6" placeholder="Belirtmek İstedikleriniz"></textarea>
+                        <a class="teklif-btn" href="#">Teklifinizi Gönderin <img src="assets/img/left.png"></a>
+                    </form>
                 </div>
-                <div class="col-xl-6 d-flex align-items-end">
-                    <div class="swiper aboutUsSwiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="image-container">
-                                    <img class="img-fluid" src="assets/img/about-us-slider/slide-1.png">
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="image-container">
-                                    <img class="img-fluid" src="assets/img/about-us-slider/slide-1.png">
-                                </div>
-                            </div>
+                <div class="col-lg-6 d-flex align-items-lg-end justify-content-lg-end order-0 order-lg-1">
+                    <iframe class="map"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4256.928348455658!2d28.935772967613016!3d41.0230046044686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caba26ff3c7445%3A0x94a235fcfc37ba4f!2zVC5DLiBGYXRpaCBLYXltYWthbWzEscSfxLE!5e0!3m2!1sen!2str!4v1655375417982!5m2!1sen!2str"
+                        style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+            <div class="row contact-details g-3 justify-content-center justify-content-xxl-center">
+
+                <div class="col-xxl col-lg-4 col-sm-6">
+                    <div class="contact-card">
+                        <div class="icon-title">
+                            <img class="img-fluid" src="assets/img/contact-icons/mail.png">
+                            <span>Eposta</span>
                         </div>
-                        <div class="swiper-pagination"></div>
+                        <p>info@realwebtasarim.com</p>
                     </div>
                 </div>
+
+                <div class="col-xxl col-lg-4 col-sm-6">
+                    <div class="contact-card">
+                        <div class="icon-title">
+                            <img class="img-fluid" src="assets/img/contact-icons/call.png">
+                            <span>Telefon</span>
+                        </div>
+                        <p>0850 305 02 39</p>
+                    </div>
+                </div>
+
+                <div class="col-xxl col-lg-4 col-sm-6">
+                    <div class="contact-card">
+                        <div class="icon-title">
+                            <img class="img-fluid" src="assets/img/contact-icons/map.png">
+                            <span>Adres</span>
+                        </div>
+                        <p>Siyavuşpaşa Mah. Ali Fuat
+                            Paşa Cd. No:11 D:3 Tüfekçi
+                            Apt. Bahçelievler / İstanbul</p>
+                    </div>
+                </div>
+
+                <div class="col-xxl col-lg-4 col-sm-6">
+                    <div class="contact-card">
+                        <div class="icon-title">
+                            <img class="img-fluid" src="assets/img/contact-icons/bag.png">
+                            <span>Çalışma Saatleri</span>
+                        </div>
+                        <p class="mt-4">Pazartesi - Cuma</p>
+                        <p>08:00 - 18:00</p>
+                    </div>
+                </div>
+
+
+                <div class="col-xxl col-lg-4 col-sm-6">
+                    <div class="contact-card">
+                        <div class="icon-title">
+                            <img class="img-fluid" src="assets/img/contact-icons/social.png">
+                            <span>Sosyal Ağlar</span>
+                        </div>
+                        <div class="social-medias justify-content-center justify-content-md-start">
+                            <a href=""><i class="fa-brands fa-instagram"></i></a>
+                            <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
     </section>
