--- a/referans-detay.html
+++ b/referans-detay.html
@@ -41,25 +41,25 @@
       <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
         <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
           <li><a class="active" href="index.html">anasayfa</a></li>
-          <li><a href="about-us.html">hakkımızda</a></li>
+          <li><a href="hakkimizda.html">hakkımızda</a></li>
           <li class="dropdown">
             <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
             <ul class="dropdown-content">
-              <li><a href="services.html">Hizmetler</a></li>
-              <li><a href="services-detail.html">Hizmet Detay</a></li>
-              <li><a href="references.html">Referanslar</a></li>
-              <li><a href="references-detail.html">Referenslar Detay</a></li>
+              <li><a href="hizmetler.html">Hizmetler</a></li>
+              <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
+              <li><a href="referanslar.html">Referanslar</a></li>
+              <li><a href="referans-detay.html">Referenslar Detay</a></li>
               <li><a href="index.html">Anasayfa</a></li>
-              <li><a href="contact.html">İletişim</a></li>
+              <li><a href="iletisim.html">İletişim</a></li>
               <li><a href="blog.html">Blog</a></li>
-              <li><a href="about-us.html">Hakkımızda</a></li>
-              <li><a href="blog-detail.html">Blog Detay</a></li>
+              <li><a href="hakkimizda.html">Hakkımızda</a></li>
+              <li><a href="blog-detay.html">Blog Detay</a></li>
 
             </ul>
           </li>
-          <li><a href="references.html">Referanslar</a></li>
+          <li><a href="referanslar.html">Referanslar</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">İletişim</a></li>
+          <li><a href="iletisim.html">İletişim</a></li>
         </ol>
       </nav>
 
@@ -129,7 +129,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="img-body">
-                                <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1.png" class="img-fluid">
+                                <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid">
                                 <a href="" class="img-content">
                                     <h4>Koç Holding</h4>
                                     <h5>Makine yönetimi Sitesi</h5>
@@ -138,7 +138,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="img-body">
-                                <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1.png" class="img-fluid">
+                                <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid">
                                 <a href="" class="img-content">
                                     <h4>Koç Holding</h4>
                                     <h5>Makine yönetimi Sitesi</h5>
@@ -147,7 +147,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="img-body">
-                                <img src="assets/img/whatWeDoSlides/neler-yapiyoruz-1.png" class="img-fluid">
+                                <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid">
                                 <a href="" class="img-content">
                                     <h4>Koç Holding</h4>
                                     <h5>Makine yönetimi Sitesi</h5>
