--- a/referanslar.html
+++ b/referanslar.html
@@ -31,105 +31,66 @@
 <body>
 
     <!-- =========== Header Side =========== -->
-  <header id="header">
-  <div
-    class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
-    <div class="logo order-0 ">
-     <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
-    </div>
-    <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
-      <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
-        <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-          <li><a class="active" href="index.html">anasayfa</a></li>
-          <li><a href="about-us.html">hakkımızda</a></li>
-          <li class="dropdown">
-            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
-            <ul class="dropdown-content">
-              <li><a href="services.html">Hizmetler</a></li>
-              <li><a href="services-detail.html">Hizmet Detay</a></li>
-              <li><a href="references.html">Referanslar</a></li>
-              <li><a href="references-detail.html">Referenslar Detay</a></li>
-              <li><a href="index.html">Anasayfa</a></li>
-              <li><a href="contact.html">İletişim</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="about-us.html">Hakkımızda</a></li>
-              <li><a href="blog-detail.html">Blog Detay</a></li>
+    <header id="header">
+        <div
+            class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+            <div class="logo order-0 ">
+                <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
+            </div>
+            <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
+                <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
+                    <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
+                        <li><a class="active" href="index.html">anasayfa</a></li>
+                        <li><a href="hakkimizda.html">hakkımızda</a></li>
+                        <li class="dropdown">
+                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                            <ul class="dropdown-content">
+                                <li><a href="hizmetler.html">Hizmetler</a></li>
+                                <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
+                                <li><a href="referanslar.html">Referanslar</a></li>
+                                <li><a href="referans-detay.html">Referenslar Detay</a></li>
+                                <li><a href="index.html">Anasayfa</a></li>
+                                <li><a href="iletisim.html">İletişim</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="blog-detay.html">Blog Detay</a></li>
 
-            </ul>
-          </li>
-          <li><a href="references.html">Referanslar</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">İletişim</a></li>
-        </ol>
-      </nav>
+                            </ul>
+                        </li>
+                        <li><a href="referanslar.html">Referanslar</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="iletisim.html">İletişim</a></li>
+                    </ol>
+                </nav>
 
-      <div class="d-none d-lg-flex ms-auto align-items-center search">
-        <i class='bx bx-search'></i>
-        <input type="text" placeholder="ARA">
-      </div>
-    </div>
-    <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-    <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
+                <div class="d-none d-lg-flex ms-auto align-items-center search">
+                    <i class='bx bx-search'></i>
+                    <input type="text" placeholder="ARA">
+                </div>
+            </div>
+            <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
+            <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
 
-</header>
+    </header>
     <!-- Header Side END -->
-
-    <section id="services-detail">
+    <section id="references">
         <div class="container">
-            <h3>HİZMETLERİMİZ</h3>
-            <div class="row gy-5 g-lg-5">
-                <div class="col-xl-6 text-center text-md-start">
-                    <div class="content">
-                        <div class="services-container">
-                            <h4>LOGO <br class="d-none d-lg-block"> TASARIMI</h4>
+            <h3>referanslar</h3>
+            <ol id="myTab" role="tablist"
+                class="d-flex justify-content-lg-between justify-content-center flex-wrap flex-lg-nowrap">
+                <li class="active" filter="*">Tümü</li>
+                <li filter=".website">Website</li>
+                <li filter=".logo">Logo</li>
+                <li filter=".kurumsal">Kurumsal Kimlik</li>
+                <li filter=".sosyal">Sosyal Medya</li>
+                <li filter=".rek">Reklam Yönetimi</li>
+            </ol>
 
-                            <h5>Kullanılan Araçlar</h5>
-                            <p>Photoshop, Illustration, Adobe XD</p>
-
-                            <h5>Hedef</h5>
-                            <p>Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına
-                                ihtiyacınız bulunmaktadır. Böylelikle bilinirliğiniz ile
-                                piyasadaki yerinizi alabilirsiniz.</p>
-                            <h5>Neden Bir Logoya Sahip Olmalıyım?</h5>
-                            <p>
-                                Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına
-                                ihtiyacınız bulunmaktadır. Böylelikle bilinirliğiniz ile
-                                piyasadaki yerinizi alabilirsiniz.
-                            </p>
-                            <a class="btn-teklif" href="#">Teklif Al</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-xl-6 d-flex align-items-end">
-                    <div class="swiper servicesDetailSwiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="image-container">
-                                    <img class="img-fluid"
-                                        src="assets/img/servis-detay/services-slider/slider-1.png">
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="image-container">
-                                    <img class="img-fluid"
-                                        src="assets/img/servis-detay/services-slider/slider-1.png">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-pagination"></div>
-                    </div>
-                </div>
-            </div>
-
-            <h3 class="content-title">YAPTIĞIMIZ LOGO TASARIMLAR</h3>
-
-            <div class="row g-4">
+            <div class="row g-4 justify-content-lg-start justify-content-center referencesIsotope">
 
                 <!-- 1. ikili -->
-                <div class="col-lg-6 col-12 website ilksira">
+                <div class="col-lg-6 col-12  website ilksira">
                     <div class="img-body">
-                        <a href="references-detail.html"> <img src="assets/img/referanslar/references-1.png"
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
@@ -137,9 +98,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 website ilksira">
+                <div class="col-lg-6 col-12 logo ilksira">
                     <div class="img-body">
-                        <a href="references-detail.html"> <img src="assets/img/referanslar/references-2.png"
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
@@ -150,9 +111,9 @@
                 <!-- 1. ikili -->
 
                 <!-- 2. ikili -->
-                <div class="col-lg-6 col-12 website ilksira">
+                <div class="col-lg-6 col-12  kurumsal ilksira">
                     <div class="img-body">
-                        <a href="references-detail.html"> <img src="assets/img/referanslar/references-1.png"
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
@@ -160,9 +121,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 website ilksira">
+                <div class="col-lg-6 col-12 sosyal ilksira">
                     <div class="img-body">
-                        <a href="references-detail.html"> <img src="assets/img/referanslar/references-2.png"
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
@@ -172,14 +133,61 @@
                 </div>
                 <!-- 2. ikili -->
 
+                <!-- 3. ikili -->
+                <div class="col-lg-6 col-12  rek ilksira">
+                    <div class="img-body">
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12 website ilksira">
+                    <div class="img-body">
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3. ikili -->
+
+                <!-- 4. ikili -->
+                <div class="col-lg-6 col-12  website ilksira">
+                    <div class="img-body">
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12 logo ilksira">
+                    <div class="img-body">
+                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
+                                class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>Koç Holding</h4>
+                            <h5>Makine yönetimi Sitesi</h5>
+                        </div>
+                    </div>
+                </div>
+                <!-- 4. ikili -->
+
+
             </div>
 
-            <div class="text-center mt-4">
-                <a class="all-btn" href="#">DAHA FAZLA GÖRÜNTÜLE <i class="fa-solid fa-angle-right"></i></a>
+
+            <div class="text-center btn-container">
+                <a class="all-product-btn" href="#">Daha fazla görüntüle <i class="fa-solid fa-angle-right"></i></a>
             </div>
         </div>
     </section>
-
     <!-- =========== Footer Side =========== -->
     <footer id="footer">
         <div class="container">
