--- a/blog-detay.html
+++ b/blog-detay.html
@@ -74,7 +74,7 @@
 </header>
     <!-- Header Side END -->
 
-    <!-- Blog Content detail START -->
+    <!-- Blog Detay START -->
     <section id="blogContent">
         <div class="container">
             <h3>Blog</h3>
@@ -185,7 +185,7 @@
             </div>
         </div>
     </section>
-    <!-- Blog Content detail END -->
+    <!-- Blog Detay END -->
 
     <!-- =========== Footer Side =========== -->
     <footer id="footer">
