--- a/hizmetler.html
+++ b/hizmetler.html
@@ -31,48 +31,50 @@
 <body>
 
     <!-- =========== Header Side =========== -->
-  <header id="header">
-  <div
-    class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
-    <div class="logo order-0 ">
-     <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
-    </div>
-    <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
-      <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
-        <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-          <li><a class="active" href="index.html">anasayfa</a></li>
-          <li><a href="hakkimizda.html">hakkımızda</a></li>
-          <li class="dropdown">
-            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
-            <ul class="dropdown-content">
-              <li><a href="hizmetler.html">Hizmetler</a></li>
-              <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
-              <li><a href="referanslar.html">Referanslar</a></li>
-              <li><a href="referans-detay.html">Referenslar Detay</a></li>
-              <li><a href="index.html">Anasayfa</a></li>
-              <li><a href="iletisim.html">İletişim</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="hakkimizda.html">Hakkımızda</a></li>
-              <li><a href="blog-detay.html">Blog Detay</a></li>
+    <header id="header">
+        <div
+            class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+            <div class="logo order-0 ">
+                <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
+            </div>
+            <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
+                <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
+                    <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
+                        <li><a class="active" href="index.html">anasayfa</a></li>
+                        <li><a href="hakkimizda.html">hakkımızda</a></li>
+                        <li class="dropdown">
+                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                            <ul class="dropdown-content">
+                                <li><a href="hizmetler.html">Hizmetler</a></li>
+                                <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
+                                <li><a href="referanslar.html">Referanslar</a></li>
+                                <li><a href="referans-detay.html">Referenslar Detay</a></li>
+                                <li><a href="index.html">Anasayfa</a></li>
+                                <li><a href="iletisim.html">İletişim</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                                <li><a href="blog-detay.html">Blog Detay</a></li>
 
-            </ul>
-          </li>
-          <li><a href="referanslar.html">Referanslar</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="iletisim.html">İletişim</a></li>
-        </ol>
-      </nav>
+                            </ul>
+                        </li>
+                        <li><a href="referanslar.html">Referanslar</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="iletisim.html">İletişim</a></li>
+                    </ol>
+                </nav>
 
-      <div class="d-none d-lg-flex ms-auto align-items-center search">
-        <i class='bx bx-search'></i>
-        <input type="text" placeholder="ARA">
-      </div>
-    </div>
-    <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-    <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
+                <div class="d-none d-lg-flex ms-auto align-items-center search">
+                    <i class='bx bx-search'></i>
+                    <input type="text" placeholder="ARA">
+                </div>
+            </div>
+            <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
+            <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
 
-</header>
+    </header>
     <!-- Header Side END -->
+
+    <!-- Hizmetler START -->
     <section id="services">
         <div class="container">
             <h3>HİZMETLERİMİZ</h3>
@@ -88,7 +90,7 @@
 
             <div class="row gy-5 justify-content-lg-start justify-content-center servicesIsotope">
 
-                <!-- 1. üçlü -->
+                <!-- 1. üçlü START-->
                 <div class="col-xl-4 col-md-6 website ilksira">
                     <div class="blog-card">
                         <div class="card-head">
@@ -124,10 +126,10 @@
                         </div>
                     </div>
                 </div>
-                <!-- 1. üçlü -->
+                <!-- 1. üçlü END-->
 
-                  <!-- 2. üçlü -->
-                  <div class="col-xl-4 col-md-6 sosyal ilksira">
+                <!-- 2. üçlü START-->
+                <div class="col-xl-4 col-md-6 sosyal ilksira">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-1.png">
@@ -162,7 +164,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- 2. üçlü -->
+                <!-- 2. üçlü END-->
 
             </div>
 
@@ -172,6 +174,8 @@
             </div> -->
         </div>
     </section>
+    <!-- Hizmetler END -->
+
     <!-- =========== Footer Side =========== -->
     <footer id="footer">
         <div class="container">
