--- a/index.html
+++ b/index.html
@@ -31,47 +31,47 @@
 <body>
 
     <!-- =========== Header Side =========== -->
- <header id="header">
-  <div
-    class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
-    <div class="logo order-0 ">
-     <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
-    </div>
-    <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
-      <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
-        <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-          <li><a class="active" href="index.html">anasayfa</a></li>
-          <li><a href="hakkimizda.html">hakkımızda</a></li>
-          <li class="dropdown">
-            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
-            <ul class="dropdown-content">
-              <li><a href="hizmetler.html">Hizmetler</a></li>
-              <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
-              <li><a href="referanslar.html">Referanslar</a></li>
-              <li><a href="referans-detay.html">Referenslar Detay</a></li>
-              <li><a href="index.html">Anasayfa</a></li>
-              <li><a href="iletisim.html">İletişim</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="hakkimizda.html">Hakkımızda</a></li>
-              <li><a href="blog-detay.html">Blog Detay</a></li>
+    <header id="header">
+        <div
+            class="p-lg-0 px-5 pt-4 pt-lg-0 container-fluid justify-content-xl-between justify-content-lg-around justify-content-between d-flex align-items-center flex-wrap flex-lg-nowrap">
+            <div class="logo order-0 ">
+                <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
+            </div>
+            <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
+                <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
+                    <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
+                        <li><a class="active" href="index.html">anasayfa</a></li>
+                        <li><a href="hakkimizda.html">hakkımızda</a></li>
+                        <li class="dropdown">
+                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                            <ul class="dropdown-content">
+                                <li><a href="hizmetler.html">Hizmetler</a></li>
+                                <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
+                                <li><a href="referanslar.html">Referanslar</a></li>
+                                <li><a href="referans-detay.html">Referenslar Detay</a></li>
+                                <li><a href="index.html">Anasayfa</a></li>
+                                <li><a href="iletisim.html">İletişim</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                                <li><a href="blog-detay.html">Blog Detay</a></li>
 
-            </ul>
-          </li>
-          <li><a href="referanslar.html">Referanslar</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="iletisim.html">İletişim</a></li>
-        </ol>
-      </nav>
+                            </ul>
+                        </li>
+                        <li><a href="referanslar.html">Referanslar</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="iletisim.html">İletişim</a></li>
+                    </ol>
+                </nav>
 
-      <div class="d-none d-lg-flex ms-auto align-items-center search">
-        <i class='bx bx-search'></i>
-        <input type="text" placeholder="ARA">
-      </div>
-    </div>
-    <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-    <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
+                <div class="d-none d-lg-flex ms-auto align-items-center search">
+                    <i class='bx bx-search'></i>
+                    <input type="text" placeholder="ARA">
+                </div>
+            </div>
+            <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
+            <a class="btn-teklif d-none d-xl-block order-5" href="#">Teklif Al</a>
 
-</header>
+    </header>
     <!-- Header Side END -->
     <!-- =========== Hero Side =========== -->
     <section id="hero">
@@ -133,7 +133,8 @@
     <section id="whatWeDo">
         <div class="container">
             <h3>neler yapıyoruz?</h3>
-            <ol id="myTab" role="tablist" class="d-flex justify-content-lg-between justify-content-center flex-wrap flex-lg-nowrap">
+            <ol id="myTab" role="tablist"
+                class="d-flex justify-content-lg-between justify-content-center flex-wrap flex-lg-nowrap">
                 <li filter="all">Tümü</li>
                 <li filter="website" class="active">Website</li>
                 <li filter="logo">Logo</li>
@@ -149,14 +150,16 @@
                         <div class="swiper-slide atest all">
                             <div class="row gy-5 gy-lg-0">
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid">
+                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
+                                        class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
                                     </div>
                                 </div>
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1-2.png" class="img-fluid">
+                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1-2.png"
+                                        class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
@@ -168,14 +171,16 @@
                         <div class="swiper-slide atest all">
                             <div class="row">
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid">
+                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
+                                        class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
                                     </div>
                                 </div>
                                 <div class="col-6 img-body">
-                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1-2.png" class="img-fluid">
+                                    <img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1-2.png"
+                                        class="img-fluid">
                                     <div class="img-content">
                                         <h4>Koç Holding</h4>
                                         <h5>Makine yönetimi Sitesi</h5>
@@ -362,7 +367,9 @@
                                 <div class="col-lg-6 order-1 order-lg-0">
                                     <div class="card-container">
                                         <h4>UX tüm iyi psikologlarla önemli bir özellik paylaşıyor: empati.</h4>
-                                        <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı süreçten başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve kişisel bilgi birikimini aktardığı değerli bir eser, gerçek yaşam
+                                        <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı
+                                            süreçten başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve
+                                            kişisel bilgi birikimini aktardığı değerli bir eser, gerçek yaşam
                                             hikayesidir. Barbaros Yarkın’ın öyküsü hepimize ilham verirken…</p>
                                         <div class="buttons">
                                             <a class="active" href="">Devamını Oku</a>
@@ -381,7 +388,9 @@
                                 <div class="col-lg-6 order-1 order-lg-0">
                                     <div class="card-container">
                                         <h4>UX tüm iyi psikologlarla önemli bir özellik paylaşıyor: empati.</h4>
-                                        <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı süreçten başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve kişisel bilgi birikimini aktardığı değerli bir eser, gerçek yaşam
+                                        <p>“Kanser Değil Yakamoz”, değerli Barbaros Yarkın’ın kanser tanısı aldığı
+                                            süreçten başlayarak yaşadıklarını günce tadında kaleme aldığı, bilimsel ve
+                                            kişisel bilgi birikimini aktardığı değerli bir eser, gerçek yaşam
                                             hikayesidir. Barbaros Yarkın’ın öyküsü hepimize ilham verirken…</p>
                                         <div class="buttons">
                                             <a class="active" href="">Devamını Oku</a>
@@ -418,11 +427,13 @@
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             How am I going to use Guest Service?
                         </button>
                     </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             Only download it here and scan the QR code of your hotel.
                         </div>
@@ -431,11 +442,13 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading2">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
                             Is Guest Service Free?
                         </button>
                     </h2>
-                    <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2" data-bs-parent="#accordionExample">
+                    <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
+                        data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             Only download it here and scan the QR code of your hotel.
                         </div>
@@ -444,11 +457,13 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading3">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
                             Is Guest Service available in every hotel?
                         </button>
                     </h2>
-                    <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3" data-bs-parent="#accordionExample">
+                    <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
+                        data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             Only download it here and scan the QR code of your hotel.
                         </div>
@@ -457,11 +472,13 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading4">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="true" aria-controls="collapse4">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse4" aria-expanded="true" aria-controls="collapse4">
                             Does the hotel I stay use Guest Service?
                         </button>
                     </h2>
-                    <div id="collapse4" class="accordion-collapse collapse " aria-labelledby="heading4" data-bs-parent="#accordionExample">
+                    <div id="collapse4" class="accordion-collapse collapse " aria-labelledby="heading4"
+                        data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             Only download it here and scan the QR code of your hotel.
                         </div>
@@ -470,11 +487,13 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="heading5">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="true" aria-controls="collapse5">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse5" aria-expanded="true" aria-controls="collapse5">
                             I have any other questions?
                         </button>
                     </h2>
-                    <div id="collapse5" class="accordion-collapse collapse " aria-labelledby="heading5" data-bs-parent="#accordionExample">
+                    <div id="collapse5" class="accordion-collapse collapse " aria-labelledby="heading5"
+                        data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             Only download it here and scan the QR code of your hotel.
                         </div>
@@ -544,7 +563,8 @@
                 </div>
                 <div class="col-lg-6 col-12 text-center text-lg-start">
                     <h3>hemen teklif alın</h3>
-                    <p>Size özel en uygun website teklifini <br class="d-none d-lg-block"> ihtiyaçlarınıza göre hazırlayalım.</p>
+                    <p>Size özel en uygun website teklifini <br class="d-none d-lg-block"> ihtiyaçlarınıza göre
+                        hazırlayalım.</p>
                     <form>
                         <input type="text" placeholder="İsim ve Soyisminiz">
                         <input type="text" placeholder="Telefonunuz">
